# a2a-langgraph-langchain

./: .env.example  .gitignore  README.md  __main__.py  agent.py  agent_executor.py  client.py  pyproject.toml
backend/: __init__.py  agent_executor.py  main.py
backend/agents/: __init__.py  agent.py
backend/core/: config.py
backend/data/: cache_manager.py  vector_store.py
backend/tools/: rag_tool.py  web_search_tool.py
frontend/: streamlit_app.py
scripts/: build_vector_db.py
